kubernetes/apps/cluster-util/kube-web-view/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-web-view
  name: kube-web-view
spec:
  selector:
    application: kube-web-view
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
