kubernetes/apps/cluster-util/kube-web-view/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-web-view
spec:
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: kube-web-view
          port: 80
